# projeto_rad

./: amigos.csv  db.sqlite3  db.sqlite3-shm  db.sqlite3-wal  dev.py  posts.csv  pyproject.toml  requirements.txt  usuarios.csv
fastApi/api/: application.py  configuration.py
fastApi/api/dtos/: friendship.py
fastApi/api/routes/: friendship.py  posts.py  users.py
fastApi/datalayer/models/: friendship.py  user.py
flask/: app.py
flask/application.py/: application.py
flask/application.py/src/api/: configuration.py  models.py  users.py
flask/configuration.py/: requirements.txt
flask/configuration.py/src/api/: configuration.py
flask/configuration.py/src/api/routes/: friendship.py  users.py
flask/configuration.py/src/api/src/api/routes/: posts.py
flask/controler/: file_processor
flask/controller/: file_processor  file_processor.py
flask/friendship/: app.py  friendship.py  models.py
flask/post.py/: main.py  models.py  requirements.txt
flask/service/: api.client.py  apiclient.py
flask/user.py/: main.py  models.py  requirements.txt  user.py
flask/users.py/: main.py
src/api/: application.py  configuration.py
src/api/dtos/: friendship.py  users.py
src/api/dtos/__pycache__/: posts.py
src/api/exceptions/: user.py
src/api/routes/: friendship.py  posts.py  users.py
src/datalayer/models/: posts.py  user.py
